--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "Pushy",
+  "name": "FeedMe",
+  "version": "0.1.0",
+  "description": "Discover last-minute deals on quality restaurant food before it gets thrown out.",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "async": "^0.9.0",
-    "body-parser": "^1.10.1",
-    "cookie-parser": "^1.3.4",
-    "crypto": "0.0.3",
-    "express": "^4.10.7",
-    "mongoose": "3.8.8",
-    "mqtt": "^0.3.13",
-    "nodemailer": "^1.3.4",
-    "nodemailer-ses-transport": "^1.2.0",
-    "path": "^0.11.14",
-    "request": "^2.51.0",
-    "stripe": "^3.3.4",
-    "validator": "^4.0.5"
+    "koa": "^1.1.2",
+    "koa-bodyparser": "^2.0.1",
+    "koa-logger": "^1.3.0",
+    "koa-route": "^2.4.2",
+    "koa-static": "^1.5.2",
+    "koa-stylus": "0.0.3",
+    "koa-views": "^3.1.0",
+    "mongoose": "^4.2.6"
   }
 }
