--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Pushy",
   "main": "server.js",
   "dependencies": {
+    "angular": "^1.4.7",
+    "angular-material": "^0.11.4",
+    "angularjs": "0.0.1",
     "async": "^0.9.0",
     "body-parser": "^1.10.1",
     "cookie-parser": "^1.3.4",
