--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "koa-stylus": "0.0.3",
     "mongoose": "^4.2.6",
     "angular": "^1.4.7",
-    "angular-material": "^0.11.4",
+    "angular-material": "^0.11.4"
   }
 }
