--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "angular": "^1.4.7",
+    "angular-material": "^0.11.4",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
     "koa-logger": "^1.3.0",
-    "koa-route": "^2.4.2",
+    "koa-router": "^5.2.3",
     "koa-static": "^1.5.2",
     "koa-stylus": "0.0.3",
-    "mongoose": "^4.2.6",
-    "angular": "^1.4.7",
-    "angular-material": "^0.11.4"
+    "mongoose": "^4.2.6"
   }
 }
