--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular": "^1.4.7",
     "angular-material": "^0.11.4",
+    "co-request": "^1.0.0",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
     "koa-logger": "^1.3.0",
